--- a/src/app/load-indicator/load-indicator.html
+++ b/src/app/load-indicator/load-indicator.html
@@ -1,3 +1,3 @@
-<div class="cssload-jumping">
+<div class="cssload-jumping" ng-show="loading">
   <span></span><span></span><span></span><span></span><span></span>
 </div>
