--- a/src/app/search/results.html
+++ b/src/app/search/results.html
@@ -12,7 +12,7 @@
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding display">
         <div class="col-lg-10 col-md-10 col-xs-8 dis_tex"><span ng-if="query.length">Displaying {{results.length}} Equipments matching ‘{{query}}’</span></div>
         <div class="col-lg-2 col-md-2 col-xs-4 text-right link_clr">
-          <div class="btn-group drop-btn">
+          <!--<div class="btn-group drop-btn">-->
             <!--<div>-->
             <!--<div class="btn-group" uib-dropdown is-open="status.isopen">-->
             <!--<button id="single-button" type="button" class="btn sort-by-btn" uib-dropdown-toggle ng-disabled="disabled">-->
@@ -25,15 +25,17 @@
             <!--</ul>-->
             <!--</div>-->
             <!--</div>-->
-          </div>
+          <!--</div>-->
 
           <!--                                    Sort By
                                               <span class="short">  <i class="fa fa-sort-desc fa-2x"></i></span>-->
         </div>
       </div>
 
-      <search-result-list-view ng-if="!flags.gridView"></search-result-list-view>
-      <search-result-grid-view ng-if="flags.gridView"></search-result-grid-view>
+      <load-indicator loading="flags.searchResultLoading"></load-indicator>
+
+      <search-result-list-view ng-if="!flags.searchResultLoading && !flags.gridView"></search-result-list-view>
+      <search-result-grid-view ng-if="!flags.searchResultLoading && flags.gridView"></search-result-grid-view>
 
 
       <div class="row no-search-row" ng-if="userQuery">
