Search related changes

--- a/src/app/search/results.html
+++ b/src/app/search/results.html
@@ -1,3 +1,4 @@
+{{params|json}}
 <div class="tab-content">
   <div ng-if="flags.searchResultLoading && query">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding display">
