--- a/src/app/search/results.html
+++ b/src/app/search/results.html
@@ -12,20 +12,20 @@
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding display">
         <div class="col-lg-10 col-md-10 col-xs-8 dis_tex"><span ng-if="query.length">Displaying {{results.length}} Equipments matching ‘{{query}}’</span></div>
         <div class="col-lg-2 col-md-2 col-xs-4 text-right link_clr">
-          <!--<div class="btn-group drop-btn">-->
-            <!--<div>-->
-            <!--<div class="btn-group" uib-dropdown is-open="status.isopen">-->
-            <!--<button id="single-button" type="button" class="btn sort-by-btn" uib-dropdown-toggle ng-disabled="disabled">-->
-            <!--Sort By <span class="caret"></span>-->
-            <!--</button>-->
-            <!--<ul class="uib-dropdown-menu sort-by-dropdown" role="menu" aria-labelledby="single-button">-->
-            <!--<li role="menuitem"><a href="#">Price</a></li>-->
-            <!--<li role="menuitem"><a href="#">Maximum Availability</a></li>-->
-            <!--<li role="menuitem"><a href="#">Relavance</a></li>-->
-            <!--</ul>-->
-            <!--</div>-->
-            <!--</div>-->
-          <!--</div>-->
+          <div class="btn-group drop-btn">
+            <div>
+            <div class="btn-group" uib-dropdown is-open="status.isopen">
+            <button id="single-button" type="button" class="btn sort-by-btn" uib-dropdown-toggle ng-disabled="disabled">
+            Sort By <span class="caret"></span>
+            </button>
+            <ul class="uib-dropdown-menu sort-by-dropdown" role="menu" aria-labelledby="single-button">
+            <li role="menuitem"><a href="#">Price</a></li>
+            <li role="menuitem"><a href="#">Maximum Availability</a></li>
+            <li role="menuitem"><a href="#">Relavance</a></li>
+            </ul>
+            </div>
+            </div>
+          </div>
 
           <!--                                    Sort By
                                               <span class="short">  <i class="fa fa-sort-desc fa-2x"></i></span>-->
