--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -96,7 +96,7 @@
                            class="form-control" placeholder="password" >
                   </div>
                   <div class="checkbox">
-                    <label class="remem-me"><input type="checkbox"> Remember me</label>
+                    <label class="remem-me"><input type="checkbox" ng-model="loginData.isRememberMe"  ng-true-value="'true'" ng-false-value="'false'"> Remember me</label>
                     <span class="flot-right need_help"><a href="/#/forgot-password">Forgot Password ?</a></span>
                   </div>
                   <hr>
