login link on forgot password page

--- a/src/app/forgot-password/forgot-password.html
+++ b/src/app/forgot-password/forgot-password.html
@@ -59,6 +59,9 @@
             </div>
             <div ng-show="flags.forgotPasswordNotifyInitiated">
               We sent you an instruction to reset password. Please check your email.
+              <br>
+              <br>
+              <a href="#/login">Click here to continue on login page.</a>
             </div>
 
 
