Landing page changes

--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -5,7 +5,7 @@
   <div class="container">
     <!-- START  logo -->
     <div class="col-lg-1 col-md-1 col-sm-2 col-xs-4 nopadding logo-center">
-      <a ng-click="takeMeToHome()">  <img src="assets/images/logo.png" alt="" ></a>
+      <a ng-href="/#/">  <img src="assets/images/logo.png" alt="" ></a>
     </div>
     <!-- END  logo -->
     <!-- START  Search box -->
