--- a/src/app/search/results.html
+++ b/src/app/search/results.html
@@ -1,7 +1,7 @@
 <div class="tab-content">
   <div ng-if="flags.searchResultLoading && query">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding display">
-      <div class="col-lg-10 col-md-10 col-xs-8 dis_tex">Searching Equipments matching ‘{{query}}’ &nbsp;&nbsp;<i class='fa fa-circle-o-notch fa-spin  fa-fw'></i></div>
+      <div class="col-lg-10 col-md-10 col-xs-8 dis_tex">Searching Equipments matching ‘{{query}}’</div>
       <div class="col-lg-2 col-md-2 col-xs-4 text-right link_clr">
       </div>
     </div>
@@ -9,8 +9,8 @@
   <div>
     <!-- START  Equipment Product Display -->
     <div id="equpment" class="tab-pane fade in active">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding display">
-        <div class="col-lg-10 col-md-10 col-xs-8 dis_tex"><span ng-if="query.length">Displaying {{results.length}} Equipments matching ‘{{query}}’</span></div>
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 nopadding display" ng-if="query.length && results.length">
+        <div class="col-lg-10 col-md-10 col-xs-8 dis_tex"><span >Displaying {{results.length}} Equipments matching ‘{{query}}’</span></div>
         <div class="col-lg-2 col-md-2 col-xs-4 text-right link_clr">
           <!--<div class="btn-group drop-btn">-->
             <!--<div>-->
