--- a/src/app/search/grid.html
+++ b/src/app/search/grid.html
@@ -44,8 +44,7 @@
 
         </li>
         <li>
-          <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x"></i></a>
-          <a ng-click="addToWishList(item)" ng-if="addedToWishlist == 'true'"><i class="fa fa-heart fa-2x wish-added"></i></a>
+          <a ng-click="addToWishList(item)"><i class="fa fa-heart fa-2x" ng-class="{'wish-added': item.Is_in_catelog}"></i></a>
         </li>
       </ul>
     </div>
