--- a/src/app/search/list.html
+++ b/src/app/search/list.html
@@ -65,8 +65,8 @@
     <div class="col-md-3 right-btn-col">
       <a ng-href="/#/equipments/{{item.Product_Id}}/reserve" type="button" class="btn btn-default my-reserve">Reserve</a>
       <button type="button" class="btn btn-default add-list" ng-click="addToWishList(item)">
-        <span ng-if="!item.addedToWishlist">Add to Wishlist</span>
-        <span ng-if="item.addedToWishlist">Added to Wishlist</span>
+        <span ng-if="!item.Is_in_catelog">Add to Wishlist</span>
+        <span ng-if="item.Is_in_catelog">Added to Wishlist</span>
       </button>
     </div>
     <div class="col-md-12"><hr class="dash"></div>
