--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -639,6 +639,7 @@ a:focus { color: #0099cc;
 .right-btn-col .add-list {
   margin-left: 0;
   display: inline-block;
+  min-width : 125px;
 }
 
 .profile-dropdown .my-alc-btn {
@@ -965,7 +966,7 @@ a:focus { color: #0099cc;
   width: 30% !important;
   display: inline-block;
 }
-  
+
 .see-your-need-small {
   display: inline-block;
 }
@@ -1130,3 +1131,7 @@ button:hover {
   transition: all 0.6s ease 0s;
 }
 
+
+.search-load-indicator-cont.cssload-jumping{
+  margin-top: 10px;
+}
