--- a/src/app/search/results.html
+++ b/src/app/search/results.html
@@ -36,10 +36,11 @@
         </div>
       </div>
 
-      <load-indicator loading="flags.searchResultLoading" class="search-load-indicator-cont"></load-indicator>
 
-      <search-result-list-view ng-if="!flags.searchResultLoading && !flags.gridView"></search-result-list-view>
-      <search-result-grid-view ng-if="!flags.searchResultLoading && flags.gridView"></search-result-grid-view>
+
+      <search-result-list-view ng-if="!flags.gridView"></search-result-list-view>
+      <search-result-grid-view ng-if="flags.gridView"></search-result-grid-view>
+      <load-indicator loading="flags.searchResultLoading" class="search-load-indicator-cont"></load-indicator>
 
       <div class="row" style="margin-top: 10px;text-align: center;" ng-if="searchTags.length && !flags.searchResultLoading">
         <div class="col-md-12 text-col">
