--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -24,9 +24,10 @@
                     </a></li>
                   <li ng-show="subcategories.Id == selectedCategory.Id">
                     <ul class="sub-categories">
-                      <li ng-repeat="childCategories in subcategories.children">
-                        <div class="checkbox filter_cat_tex1">
-                          <label><input type="checkbox" ng-value="true" ng-model="categoryAttributes" ng-change="selectCategoryAttributes(childCategories)"><span class="cat_mar">{{childCategories.Name}}</span></label>
+                      <li ng-repeat="attribute in subcategories.Attribute">
+                        <div>{{attribute.Attribute_name}}</div>
+                        <div class="checkbox filter_cat_tex1" ng-repeat="value in attribute.value">
+                          <label><input type="checkbox" name="selectedAtrributes[]" value="{{value.attribute_value_name}}" ng-checked="selectedAttributes.indexOf(value.attribute_value_name) > -1" ng-click="selectCategoryAttributes(attribute.Attribute_name,value.attribute_value_name)"><span class="cat_mar">{{value.attribute_value_name}}</span></label>
                         </div>
                       </li>
                     </ul>
